Updated page Macro FCCircularText/de

--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -4,7 +4,7 @@
 <li><a href="../es/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCCircularText/es (26% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Macro CircularText (83% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Macro Testo Circolare (83% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makrodefinicja: FCCircularText (83% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
+<li><a href="../pl/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: FCCircularText (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -117,12 +117,8 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
 <p>Den Makroordner <b>FcString</b> f&uuml;r erstellte Zeichen und eine Datei <b>FcClock</b> f&uuml;r erstellte Uhren starten.
-</p>
-<div class="mw-translate-fuzzy">
-<p>Alle Zeichen sind und bleiben unabh&auml;ngig. Beim Erstellen von Extrusionen wird nichts gel&ouml;scht. Wenn der Verbund mit <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Run Comp</span> erstellt wird, wird es aus dem Ordner kopiert.
-</p>
-</div>
-<p>Die Optionen sind standardm&auml;&szlig;ig ausgegraut und in allen Funktionen aktiv, wenn sie aktiviert sind <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxTrue.svg&amp;filetimestamp=20200323161507&amp;.html" class="mw-file-description"><img src="../File/CheckBoxTrue.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <span></span></span>:
+</p><p>Alle Zeichen sind und bleiben unabh&auml;ngig. Beim Erstellen von Extrusionen wird nichts gel&ouml;scht. Wenn ein Verbund mit <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Run Comp</span> erstellt wird, wird er aus dem Ordner kopiert.
+</p><p>Die Optionen sind standardm&auml;&szlig;ig ausgegraut und in allen Funktionen aktiv, wenn sie aktiviert sind <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxTrue.svg&amp;filetimestamp=20200323161507&amp;.html" class="mw-file-description"><img src="../File/CheckBoxTrue.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <span></span></span>:
 </p>
 <ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Zeichen extrudieren<span></span></span></li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Platzierung<span></span></span></li>
@@ -155,9 +151,7 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 <ul><li>Standardm&auml;&szlig;ig ARIAL.TTF.</li></ul></li></ul>
 <p><span id="Available_options"></span>
 </p>
-<div class="mw-translate-fuzzy">
 <h4><span id="Verf.C3.BCgbare_Optionen"></span><span class="mw-headline" id="Verf&uuml;gbare_Optionen">Verf&uuml;gbare Optionen</span></h4>
-</div>
 <p>Nach der ersten Verwendung m&uuml;ssen die folgenden Parameter ge&auml;ndert werden: 
 </p><p><b>User parameter:BaseApp/Preferences/Macros/FCMmacros/FCCircularText</b>
 </p><p><b>switchModeTextList</b>
@@ -998,35 +992,35 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121155814
+Cached time: 20260121221632
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.492 seconds
-Real time usage: 0.800 seconds
-Preprocessor visited node count: 1605/1000000
+CPU time usage: 0.429 seconds
+Real time usage: 0.610 seconds
+Preprocessor visited node count: 1603/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 66841/5000000 bytes
+Unstrip post&#8208;expand size: 66846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  448.746      1 -total
-  3.94%   17.686      1 Template:Macro/de
-  2.57%   11.537      1 Template:Draft_Tools_navi/de
-  1.79%    8.036     14 Template:Incode
-  1.55%    6.963      7 Template:RadioButton
-  1.48%    6.627      2 Template:Navigation_menu_2
-  1.47%    6.582     10 Template:Code
-  1.13%    5.072      3 Template:ColoredText
-  0.95%    4.265     10 Template:CheckBox
-  0.68%    3.071      1 Template:Caption
+100.00%  364.506      1 -total
+  3.21%   11.704      1 Template:Draft_Tools_navi/de
+  2.36%    8.616      1 Template:Emphasis
+  1.71%    6.222     10 Template:Code
+  1.64%    5.987      1 Template:Macro/de
+  1.56%    5.703      1 Template:Codeextralink
+  1.54%    5.608      3 Template:ColoredText
+  1.53%    5.574      2 Template:Navigation_menu_2
+  1.29%    4.693      7 Template:RadioButton
+  1.26%    4.588      6 Template:SpinBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121155813 and revision id 1741901. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121221632 and revision id 1742139. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
