Updated page Macro FCCircularText/de

--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -158,12 +158,10 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 </p>
 <ul><li>0 = Normaler Textmodus (und Schwarz) schneidet die switchFontComBox</li>
 <li>1 = erlaubt switchFontComBox 1</li></ul>
-<div class="mw-translate-fuzzy">
 <p><b>switchFontComBox</b>
 </p>
 <ul><li>0 = (und switchModeTextList= 1) Textmodus (in Farbe) in der ComboBox-Liste, schneller</li>
-<li>1 = (and switchModeTextList= 1) fontFamily langsamer, aber sch&ouml;ner ComboBoxst!</li></ul>
-</div>
+<li>1 = (and switchModeTextList= 1) fontFamily langsamer, aber sch&ouml;nerer ComboBoxst!</li></ul>
 <div class="mw-translate-fuzzy">
 <p><b>setSystemFonts</b>
 </p>
@@ -992,13 +990,13 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121221632
+Cached time: 20260121221659
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.429 seconds
-Real time usage: 0.610 seconds
-Preprocessor visited node count: 1603/1000000
+CPU time usage: 0.413 seconds
+Real time usage: 0.727 seconds
+Preprocessor visited node count: 1602/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
@@ -1008,19 +1006,19 @@ Unstrip post&#8208;expand size: 66846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  364.506      1 -total
-  3.21%   11.704      1 Template:Draft_Tools_navi/de
-  2.36%    8.616      1 Template:Emphasis
-  1.71%    6.222     10 Template:Code
-  1.64%    5.987      1 Template:Macro/de
-  1.56%    5.703      1 Template:Codeextralink
-  1.54%    5.608      3 Template:ColoredText
-  1.53%    5.574      2 Template:Navigation_menu_2
-  1.29%    4.693      7 Template:RadioButton
-  1.26%    4.588      6 Template:SpinBox
+100.00%  368.461      1 -total
+  4.03%   14.844      1 Template:Draft_Tools_navi/de
+  2.36%    8.679     10 Template:Code
+  1.86%    6.847      1 Template:Userdocnavi/de
+  1.72%    6.354      1 Template:Emphasis
+  1.66%    6.105      7 Template:RadioButton
+  1.65%    6.087     10 Template:CheckBox
+  1.58%    5.809      3 Template:ColoredText
+  1.48%    5.441      1 Template:Caption
+  1.06%    3.916      1 Template:Macro/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121221632 and revision id 1742139. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121221658 and revision id 1742141. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
