--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -162,14 +162,12 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 </p>
 <ul><li>0 = (und switchModeTextList= 1) Textmodus (in Farbe) in der ComboBox-Liste, schneller</li>
 <li>1 = (and switchModeTextList= 1) fontFamily langsamer, aber sch&ouml;nerer ComboBoxst!</li></ul>
-<div class="mw-translate-fuzzy">
 <p><b>setSystemFonts</b>
 </p>
 <ul><li>0 = matplotlib.font_manager.findSystemFonts("C:/", "ttf")</li>
 <li>Alle Schriftarten (in allen Ordnern und Unterordnern des DD) bearbeiten!</li>
 <li>1 = fontman.findSystemFonts(self.pathFont)</li>
 <li>alle Schriftarten im Verzeichnis (und in allen Unterordnern)</li></ul>
-</div>
 <p><b>seTtextAlignement</b>
 </p>
 <ul><li>0 = Linksb&uuml;ndig (standard)</li>
@@ -213,9 +211,7 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 <div style="clear:both"></div>
 <p><span id="Second_section"></span>
 </p>
-<div class="mw-translate-fuzzy">
 <h3><span class="mw-headline" id="Zweiter_Abschnitt">Zweiter Abschnitt</span></h3>
-</div>
 <p>Konfigurieren von Zeichen in FCCircularText
 </p>
 <figure class="mw-default-size mw-halign-center" typeof="mw:File"><a href="../index.php?title=FCCircularText_08.png&amp;filetimestamp=20200601141642&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_08.png" decoding="async" width="497" height="266" class="mw-file-element" data-file-width="497" data-file-height="266"></a><figcaption></figcaption></figure>
@@ -990,13 +986,13 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121221659
+Cached time: 20260121221715
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.413 seconds
-Real time usage: 0.727 seconds
-Preprocessor visited node count: 1602/1000000
+CPU time usage: 0.414 seconds
+Real time usage: 0.733 seconds
+Preprocessor visited node count: 1600/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
@@ -1006,19 +1002,19 @@ Unstrip post&#8208;expand size: 66846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  368.461      1 -total
-  4.03%   14.844      1 Template:Draft_Tools_navi/de
-  2.36%    8.679     10 Template:Code
-  1.86%    6.847      1 Template:Userdocnavi/de
-  1.72%    6.354      1 Template:Emphasis
-  1.66%    6.105      7 Template:RadioButton
-  1.65%    6.087     10 Template:CheckBox
-  1.58%    5.809      3 Template:ColoredText
-  1.48%    5.441      1 Template:Caption
-  1.06%    3.916      1 Template:Macro/de
+100.00%  470.191      1 -total
+  4.50%   21.146      1 Template:Draft_Tools_navi/de
+  2.23%   10.485      1 Template:Macro/de
+  2.17%   10.219     10 Template:CheckBox
+  2.07%    9.712     10 Template:Code
+  2.01%    9.458      2 Template:Navigation_menu_2
+  1.70%    8.006     22 Template:Button
+  1.69%    7.962     18 Template:FALSE
+  1.66%    7.822      1 Template:Codeextralink
+  1.64%    7.697      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121221658 and revision id 1742141. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121221714 and revision id 1742145. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
