--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -273,11 +273,9 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 <p><span id="Second_area"></span>
 </p>
 <h4><span class="mw-headline" id="Zweiter_Bereich">Zweiter Bereich</span></h4>
-<div class="mw-translate-fuzzy">
 <p>In diesem Abschnitt kann man das allgemeine Verhalten der Zeichen in allen verf&uuml;gbaren Optionen konfigurieren, jedoch mit einigen Abweichungen.
-Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er ausgegraut angezeigt.
+Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er ausgegraut.
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_10.png&amp;filetimestamp=20200601153053&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_10.png" decoding="async" width="490" height="261" class="mw-file-element" data-file-width="490" data-file-height="261"></a><figcaption></figcaption></figure>
 <ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">10.0 mm  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> <b>Radius of circle</b>&nbsp;: Radius des Kreises. (Standardwert 10)</li>
@@ -986,13 +984,13 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121221715
+Cached time: 20260121221747
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.414 seconds
-Real time usage: 0.733 seconds
-Preprocessor visited node count: 1600/1000000
+CPU time usage: 0.472 seconds
+Real time usage: 1.764 seconds
+Preprocessor visited node count: 1599/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
@@ -1002,19 +1000,19 @@ Unstrip post&#8208;expand size: 66846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  470.191      1 -total
-  4.50%   21.146      1 Template:Draft_Tools_navi/de
-  2.23%   10.485      1 Template:Macro/de
-  2.17%   10.219     10 Template:CheckBox
-  2.07%    9.712     10 Template:Code
-  2.01%    9.458      2 Template:Navigation_menu_2
-  1.70%    8.006     22 Template:Button
-  1.69%    7.962     18 Template:FALSE
-  1.66%    7.822      1 Template:Codeextralink
-  1.64%    7.697      1 Template:Caption
+100.00% 1099.639      1 -total
+  2.35%   25.817      1 Template:Draft_Tools_navi/de
+  1.82%   20.054     10 Template:Code
+  1.55%   17.025      1 Template:MenuCommand
+  1.54%   16.981     19 Template:Clear
+  1.38%   15.227      1 Template:Userdocnavi/de
+  1.32%   14.480     14 Template:Incode
+  1.14%   12.531      3 Template:ColoredText
+  0.89%    9.819     10 Template:CheckBox
+  0.83%    9.101      1 Template:Macro/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121221714 and revision id 1742145. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121221746 and revision id 1742147. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
