--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -276,7 +276,6 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 <p>In diesem Abschnitt kann man das allgemeine Verhalten der Zeichen in allen verf&uuml;gbaren Optionen konfigurieren, jedoch mit einigen Abweichungen.
 Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er ausgegraut.
 </p>
-<div class="mw-translate-fuzzy">
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_10.png&amp;filetimestamp=20200601153053&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_10.png" decoding="async" width="490" height="261" class="mw-file-element" data-file-width="490" data-file-height="261"></a><figcaption></figcaption></figure>
 <ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">10.0 mm  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> <b>Radius of circle</b>&nbsp;: Radius des Kreises. (Standardwert 10)</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">2.0 mm  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> <b>Size character</b>&nbsp;: Zeichenh&ouml;he. (Standardwert 2)</li>
@@ -287,9 +286,8 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 <li class="mw-empty-elt">
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Extrude Char</b><span></span></span>&nbsp;: Extrusionszeichen f&uuml;r Kontrollk&auml;stchen. (Standardm&auml;&szlig;ig deaktiviert)</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Placement</b><span></span></span>&nbsp;: Textplatzierung in der 3D-Ansicht. (Standardm&auml;&szlig;ig inaktiv)</li>
-<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Sp. inclination</b><span></span></span>&nbsp;: Neigung von Zeichen in drei Achsen X, Y und Z (Beispiel f&uuml;r die Abdeckung eines solchen Kegels). (Inaktiv Standard)</li></ul>
+<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Sp. inclination</b><span></span></span>&nbsp;: Neigung von Zeichen in drei Achsen X, Y und Z (Beispiel f&uuml;r die Abdeckung eines solchen Kegels). (Inaktiv, Standard)</li></ul>
 <div style="clear:both"></div>
-</div>
 <p><span id="Outdoor"></span>
 </p>
 <h5><span class="mw-headline" id="Ausserhalb">Ausserhalb</span></h5>
@@ -984,13 +982,13 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121221747
+Cached time: 20260121221824
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.472 seconds
-Real time usage: 1.764 seconds
-Preprocessor visited node count: 1599/1000000
+CPU time usage: 0.406 seconds
+Real time usage: 0.563 seconds
+Preprocessor visited node count: 1598/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
@@ -1000,19 +998,19 @@ Unstrip post&#8208;expand size: 66846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00% 1099.639      1 -total
-  2.35%   25.817      1 Template:Draft_Tools_navi/de
-  1.82%   20.054     10 Template:Code
-  1.55%   17.025      1 Template:MenuCommand
-  1.54%   16.981     19 Template:Clear
-  1.38%   15.227      1 Template:Userdocnavi/de
-  1.32%   14.480     14 Template:Incode
-  1.14%   12.531      3 Template:ColoredText
-  0.89%    9.819     10 Template:CheckBox
-  0.83%    9.101      1 Template:Macro/de
+100.00%  333.433      1 -total
+  4.00%   13.341      1 Template:Draft_Tools_navi/de
+  1.90%    6.343     10 Template:Code
+  1.54%    5.147     14 Template:Incode
+  1.52%    5.065     10 Template:CheckBox
+  1.37%    4.560     18 Template:FALSE
+  1.35%    4.509      2 Template:Navigation_menu_2
+  1.18%    3.946      1 Template:Userdocnavi/de
+  1.15%    3.845      7 Template:RadioButton
+  1.12%    3.719      1 Template:Macro/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121221746 and revision id 1742147. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121221823 and revision id 1742149. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
