Updated page Macro FCCircularText/de

--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -349,7 +349,6 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 		</li>
 </ul>
 </center>
-<div class="mw-translate-fuzzy">
 <ul><li>Der Wendel-Bereich ist standardm&auml;&szlig;ig ausgeblendet. Das Fenster ist sichtbar, wenn das Optionsfeld <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonTrue.svg&amp;filetimestamp=20200323161550&amp;.html" class="mw-file-description"><img src="../File/RadioButtonTrue.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Helix<span></span></span> aktiviert ist.</li></ul>
 <div style="clear:both"></div>
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_14.png&amp;filetimestamp=20200601143334&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_14.png" decoding="async" width="495" height="415" class="mw-file-element" data-file-width="495" data-file-height="415"></a><figcaption></figcaption></figure>
@@ -361,7 +360,6 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 <ul><li>Wenn <b>Step of helix</b> (Steigung der Wendel) Null ist, werden die Drehschalter <b>Base Helix</b> und <b>End Helix</b> aktiviert.</li>
 <li><b>Base Helix</b> bildet die Grundlage f&uuml;r den Startpunkt der Wendel (auch Positionierung Z). Wenn 'Placement Z' ungleich Null ist, wird der Startpunkt zu Placement Z hinzugef&uuml;gt.</li>
 <li><b>End Helix</b> Das Ende der Steigung der Wendel wird relativ zur H&ouml;he und zur Anzahl der Zeichen pro Windung berechnet.</li></ul>
-</div>
 <p><span id="Clock"></span>
 </p>
 <h5><span class="mw-headline" id="Uhr">Uhr</span></h5>
@@ -982,13 +980,13 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121221824
+Cached time: 20260121221837
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.406 seconds
-Real time usage: 0.563 seconds
-Preprocessor visited node count: 1598/1000000
+CPU time usage: 0.455 seconds
+Real time usage: 0.955 seconds
+Preprocessor visited node count: 1597/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
@@ -998,19 +996,19 @@ Unstrip post&#8208;expand size: 66846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  333.433      1 -total
-  4.00%   13.341      1 Template:Draft_Tools_navi/de
-  1.90%    6.343     10 Template:Code
-  1.54%    5.147     14 Template:Incode
-  1.52%    5.065     10 Template:CheckBox
-  1.37%    4.560     18 Template:FALSE
-  1.35%    4.509      2 Template:Navigation_menu_2
-  1.18%    3.946      1 Template:Userdocnavi/de
-  1.15%    3.845      7 Template:RadioButton
-  1.12%    3.719      1 Template:Macro/de
+100.00%  550.720      1 -total
+  8.30%   45.720      1 Template:Draft_Tools_navi/de
+  4.29%   23.652     18 Template:FALSE
+  3.48%   19.164      2 Template:Navigation_menu_2
+  2.67%   14.727     14 Template:TRUE
+  2.41%   13.278     10 Template:CheckBox
+  1.97%   10.822     22 Template:Button
+  1.72%    9.480     10 Template:Code
+  1.70%    9.341     14 Template:Incode
+  1.39%    7.663      3 Template:ColoredText
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121221823 and revision id 1742149. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121221836 and revision id 1742151. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
