--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -406,11 +406,9 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 </p><div style="clear:both"></div>
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_17.png&amp;filetimestamp=20200601150530&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_17.png" decoding="async" width="492" height="131" class="mw-file-element" data-file-width="492" data-file-height="131"></a><figcaption></figcaption></figure><p><span typeof="mw:File"><a href="../index.php?title=FCCircularText_37.png&amp;filetimestamp=20141124203510&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_37.png" decoding="async" width="200" height="128" class="mw-file-element" data-file-width="720" data-file-height="462"></a></span>
 </p><div style="clear:both"></div>
-<div class="mw-translate-fuzzy">
 <ul><li>If <b>Support number face</b> (Anzahl der Unterst&uuml;tzungsfl&auml;chen) ist gleich Null, gibt es keine Unterst&uuml;tzung.</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Roman</span>&nbsp;: Die Schrift wird in r&ouml;mischen Ziffern sein. <b>I II III IIII V VI VII VIII IX X XI XII</b></li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Axial</span>  &nbsp;: Die Zahlen werden axial geschrieben.</li></ul>
-</div>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Axial</span>&nbsp;: Die Zahlen werden axial geschrieben.</li></ul>
 <p><span id="Path_section"></span>
 </p>
 <h3><span class="mw-headline" id="Abschnitt_Pfad">Abschnitt Pfad</span></h3>
@@ -980,13 +978,13 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121221837
+Cached time: 20260121221854
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.455 seconds
-Real time usage: 0.955 seconds
-Preprocessor visited node count: 1597/1000000
+CPU time usage: 0.426 seconds
+Real time usage: 1.063 seconds
+Preprocessor visited node count: 1596/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
@@ -996,19 +994,19 @@ Unstrip post&#8208;expand size: 66846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  550.720      1 -total
-  8.30%   45.720      1 Template:Draft_Tools_navi/de
-  4.29%   23.652     18 Template:FALSE
-  3.48%   19.164      2 Template:Navigation_menu_2
-  2.67%   14.727     14 Template:TRUE
-  2.41%   13.278     10 Template:CheckBox
-  1.97%   10.822     22 Template:Button
-  1.72%    9.480     10 Template:Code
-  1.70%    9.341     14 Template:Incode
-  1.39%    7.663      3 Template:ColoredText
+100.00%  809.779      1 -total
+  3.24%   26.216     14 Template:TRUE
+  2.21%   17.860      1 Template:Codeextralink
+  1.86%   15.079      7 Template:RadioButton
+  1.64%   13.271      1 Template:Macro/de
+  1.63%   13.239     22 Template:Button
+  1.58%   12.761      1 Template:Draft_Tools_navi/de
+  1.46%   11.829     14 Template:Incode
+  1.45%   11.742      1 Template:MenuCommand
+  1.28%   10.343     18 Template:FALSE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121221836 and revision id 1742151. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121221853 and revision id 1742153. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
