Updated page Macro FCCircularText/de

--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -419,20 +419,15 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 <p>Der Titelbereich &auml;ndert sich und zeigt die L&auml;nge des ausgew&auml;hlten Drahtes an.
 </p>
 </div>
-<div class="mw-translate-fuzzy">
-<p>Wenn man einen Linienzug, einen Bogen, einen Kreis, eine Linie und eine Kante ausw&auml;hlen, wird der Abschnitt Pfad in <span style="background-color: #E0F8E0">gr&uuml;n</span> und der nicht verwendete Befehl in <span style="background-color: #F8E0E0">rot</span> eingef&auml;rbt.
+<p>Wenn man einen Linienzug, einen Bogen, einen Kreis, eine Linie oder eine Kante ausw&auml;hlen, wird der Abschnitt Pfad in <span style="background-color: #E0F8E0">gr&uuml;n</span> und der nicht verwendete Befehl in <span style="background-color: #F8E0E0">rot</span> eingef&auml;rbt.
 </p>
-</div>
 <ol><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Orthogonal<span></span></span> Das Zeichen ist orthogonal zur Ansicht.</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Tangential<span></span></span> Das Zeichen ist tangential zum Punktpfad auf dem Linienzug.</li></ol>
 <ol><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> BB Base<span></span></span> Der Punktbasis des Charakters soll den Pfad auf dem Linienzug anzeigen.</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> BB Center<span></span></span> Die BounBox-Mitte des Charakters soll den Pfad auf dem Linienzug anzeigen.</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> BB Top<span></span></span> Die obere BoundingBox des Charakters soll den Pfad auf dem Linienzug anzeigen.</li></ol>
-<div class="mw-translate-fuzzy">
 <p>Der zuletzt verwendete Radiobutton wird im Parameter von FreeCAD gespeichert.
-</p>
-</div>
-<p><span id="Command_section"></span>
+</p><p><span id="Command_section"></span>
 </p>
 <h3><span class="mw-headline" id="Abschnitt_Befehl">Abschnitt Befehl</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FCCircularText_13.png&amp;filetimestamp=20210315204604&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_13.png" decoding="async" width="500" height="115" class="mw-file-element" data-file-width="500" data-file-height="115"></a></span>
@@ -978,13 +973,13 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121221854
+Cached time: 20260121222013
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.426 seconds
-Real time usage: 1.063 seconds
-Preprocessor visited node count: 1596/1000000
+CPU time usage: 0.463 seconds
+Real time usage: 0.978 seconds
+Preprocessor visited node count: 1594/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
@@ -994,19 +989,19 @@ Unstrip post&#8208;expand size: 66846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  809.779      1 -total
-  3.24%   26.216     14 Template:TRUE
-  2.21%   17.860      1 Template:Codeextralink
-  1.86%   15.079      7 Template:RadioButton
-  1.64%   13.271      1 Template:Macro/de
-  1.63%   13.239     22 Template:Button
-  1.58%   12.761      1 Template:Draft_Tools_navi/de
-  1.46%   11.829     14 Template:Incode
-  1.45%   11.742      1 Template:MenuCommand
-  1.28%   10.343     18 Template:FALSE
+100.00%  382.920      1 -total
+  4.41%   16.880     14 Template:TRUE
+  4.15%   15.893      1 Template:Caption
+  3.10%   11.854      1 Template:Draft_Tools_navi/de
+  2.42%    9.248     10 Template:CheckBox
+  1.95%    7.448     18 Template:FALSE
+  1.94%    7.432     10 Template:Code
+  1.76%    6.732     22 Template:Button
+  1.57%    5.996      1 Template:Macro/de
+  1.28%    4.889      7 Template:RadioButton
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121221853 and revision id 1742153. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222012 and revision id 1742157. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
