Updated page Macro FCCircularText/de

--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -433,12 +433,10 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FCCircularText_13.png&amp;filetimestamp=20210315204604&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_13.png" decoding="async" width="500" height="115" class="mw-file-element" data-file-width="500" data-file-height="115"></a></span>
 </p>
 <div style="clear:both"></div>
-<div class="mw-translate-fuzzy">
-<ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Exit</span>   &nbsp;: Verl&auml;sst das Makro.</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Reset</span>  &nbsp;: Alle Werte zur&uuml;cksetzen und die Anzahl der im Fenster angezeigten Zeichen anzeigen.</li>
+<ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Exit</span>&nbsp;: Verl&auml;sst das Makro.</li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Reset</span>&nbsp;: Alle Werte zur&uuml;cksetzen und die Anzahl der im Fenster angezeigten Zeichen anzeigen.</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Run Comp</span>&nbsp;: Startet das Makro und erstellt ein zusammengesetztes Objekt aus allen Zeichen.</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Run</span>    &nbsp;: Startet das Makro</li></ul>
-</div>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Run</span>&nbsp;: Startet das Makro</li></ul>
 <p><span id="Parameters_available"></span>
 </p>
 <h3><span id="Verf.C3.BCgbare_Parameter"></span><span class="mw-headline" id="Verf&uuml;gbare_Parameter">Verf&uuml;gbare Parameter</span></h3>
@@ -973,13 +971,13 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121222013
+Cached time: 20260121222051
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.463 seconds
-Real time usage: 0.978 seconds
-Preprocessor visited node count: 1594/1000000
+CPU time usage: 0.399 seconds
+Real time usage: 0.563 seconds
+Preprocessor visited node count: 1593/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
@@ -989,19 +987,19 @@ Unstrip post&#8208;expand size: 66846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  382.920      1 -total
-  4.41%   16.880     14 Template:TRUE
-  4.15%   15.893      1 Template:Caption
-  3.10%   11.854      1 Template:Draft_Tools_navi/de
-  2.42%    9.248     10 Template:CheckBox
-  1.95%    7.448     18 Template:FALSE
-  1.94%    7.432     10 Template:Code
-  1.76%    6.732     22 Template:Button
-  1.57%    5.996      1 Template:Macro/de
-  1.28%    4.889      7 Template:RadioButton
+100.00%  339.125      1 -total
+  5.97%   20.259      1 Template:Macro/de
+  5.72%   19.412      1 Template:Draft_Tools_navi/de
+  3.39%   11.510     10 Template:Code
+  2.37%    8.035     10 Template:CheckBox
+  2.34%    7.950      1 Template:Codeextralink
+  2.28%    7.738      2 Template:Navigation_menu_2
+  2.01%    6.824      3 Template:ColoredText
+  1.55%    5.260      7 Template:RadioButton
+  1.10%    3.730      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222012 and revision id 1742157. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222050 and revision id 1742159. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
