--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -440,10 +440,8 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 <p><span id="Parameters_available"></span>
 </p>
 <h3><span id="Verf.C3.BCgbare_Parameter"></span><span class="mw-headline" id="Verf&uuml;gbare_Parameter">Verf&uuml;gbare Parameter</span></h3>
-<div class="mw-translate-fuzzy">
 <p>Bestimmte Parameter sind in den Parametern von FreeCAD verf&uuml;gbar, siehe: <b>Men&uuml; &rarr; Werkzeuge &rarr; Parameter bearbeiten</b>
 </p>
-</div>
 <ul><li>Benutzerparameter: BaseApp/Preferences/Macros/FCMmacros/FCCircularText</li></ul>
 <div class="mw-translate-fuzzy">
 <ul><li><ul><li><code>switchModeTextList</code>&nbsp;:
@@ -971,13 +969,13 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121222051
+Cached time: 20260121222101
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.399 seconds
-Real time usage: 0.563 seconds
-Preprocessor visited node count: 1593/1000000
+CPU time usage: 0.446 seconds
+Real time usage: 0.682 seconds
+Preprocessor visited node count: 1592/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
@@ -987,19 +985,19 @@ Unstrip post&#8208;expand size: 66846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  339.125      1 -total
-  5.97%   20.259      1 Template:Macro/de
-  5.72%   19.412      1 Template:Draft_Tools_navi/de
-  3.39%   11.510     10 Template:Code
-  2.37%    8.035     10 Template:CheckBox
-  2.34%    7.950      1 Template:Codeextralink
-  2.28%    7.738      2 Template:Navigation_menu_2
-  2.01%    6.824      3 Template:ColoredText
-  1.55%    5.260      7 Template:RadioButton
-  1.10%    3.730      1 Template:Caption
+100.00%  427.134      1 -total
+  2.90%   12.388     14 Template:TRUE
+  2.73%   11.677      7 Template:RadioButton
+  2.42%   10.338     18 Template:FALSE
+  2.20%    9.417      1 Template:Draft_Tools_navi/de
+  2.08%    8.872      1 Template:Codeextralink
+  1.95%    8.350     10 Template:CheckBox
+  1.88%    8.041      3 Template:ColoredText
+  1.84%    7.875      1 Template:Macro/de
+  1.41%    6.013      6 Template:SpinBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222050 and revision id 1742159. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222100 and revision id 1742161. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
