--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -443,7 +443,6 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 <p>Bestimmte Parameter sind in den Parametern von FreeCAD verf&uuml;gbar, siehe: <b>Men&uuml; &rarr; Werkzeuge &rarr; Parameter bearbeiten</b>
 </p>
 <ul><li>Benutzerparameter: BaseApp/Preferences/Macros/FCMmacros/FCCircularText</li></ul>
-<div class="mw-translate-fuzzy">
 <ul><li><ul><li><code>switchModeTextList</code>&nbsp;:
 <ul><li><code>false</code> Normaler Textmodus (und schwarz) deaktiviert switchFontComBox</li>
 <li><code>true</code> erlaubt switchFontComBox 1 (Standard)</li></ul></li>
@@ -463,7 +462,6 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 <li><code>setPositionTop</code>&nbsp;: <code>true</code> <code>false</code></li>
 <li><code>switchVersionSearch</code>&nbsp;: <code>true</code> <code>false</code></li>
 <li><code>Version</code>&nbsp;: FCCircularText-Version</li></ul></li></ul>
-</div>
 <p>Den Makroordner <b>FcString</b> f&uuml;r erstellte Zeichen und eine Datei <b>FcClock</b> f&uuml;r erstellte Uhren starten.
 </p><p><span id="Script"></span>
 </p>
@@ -969,13 +967,13 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121222101
+Cached time: 20260121222125
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.446 seconds
-Real time usage: 0.682 seconds
-Preprocessor visited node count: 1592/1000000
+CPU time usage: 0.453 seconds
+Real time usage: 0.901 seconds
+Preprocessor visited node count: 1591/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
@@ -985,19 +983,19 @@ Unstrip post&#8208;expand size: 66846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  427.134      1 -total
-  2.90%   12.388     14 Template:TRUE
-  2.73%   11.677      7 Template:RadioButton
-  2.42%   10.338     18 Template:FALSE
-  2.20%    9.417      1 Template:Draft_Tools_navi/de
-  2.08%    8.872      1 Template:Codeextralink
-  1.95%    8.350     10 Template:CheckBox
-  1.88%    8.041      3 Template:ColoredText
-  1.84%    7.875      1 Template:Macro/de
-  1.41%    6.013      6 Template:SpinBox
+100.00%  595.829      1 -total
+  2.64%   15.758      1 Template:Draft_Tools_navi/de
+  1.74%   10.376      7 Template:RadioButton
+  1.69%   10.086      1 Template:Macro/de
+  1.47%    8.772      3 Template:ColoredText
+  1.37%    8.170      2 Template:Navigation_menu_2
+  1.22%    7.259     10 Template:CheckBox
+  1.14%    6.817      1 Template:Codeextralink
+  0.95%    5.635      6 Template:SpinBox
+  0.78%    4.627      1 Template:Userdocnavi/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222100 and revision id 1742161. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222124 and revision id 1742163. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
