Updated page Macro FCCircularText/de

--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -415,11 +415,8 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FCCircularText_06_Path.png&amp;filetimestamp=20210315204329&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_06_Path.png" decoding="async" width="520" height="712" class="mw-file-element" data-file-width="520" data-file-height="712"></a></span>
 </p>
 <div style="clear:both"></div>
-<div class="mw-translate-fuzzy">
-<p>Der Titelbereich &auml;ndert sich und zeigt die L&auml;nge des ausgew&auml;hlten Drahtes an.
-</p>
-</div>
-<p>Wenn man einen Linienzug, einen Bogen, einen Kreis, eine Linie oder eine Kante ausw&auml;hlen, wird der Abschnitt Pfad in <span style="background-color: #E0F8E0">gr&uuml;n</span> und der nicht verwendete Befehl in <span style="background-color: #F8E0E0">rot</span> eingef&auml;rbt.
+<p>Der Titelbereich &auml;ndert sich und zeigt die L&auml;nge der ausgew&auml;hlten Kante an.
+</p><p>Wenn man einen Linienzug, einen Bogen, einen Kreis, eine Linie oder eine Kante ausw&auml;hlen, wird der Abschnitt Pfad in <span style="background-color: #E0F8E0">gr&uuml;n</span> und der nicht verwendete Befehl in <span style="background-color: #F8E0E0">rot</span> eingef&auml;rbt.
 </p>
 <ol><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Orthogonal<span></span></span> Das Zeichen ist orthogonal zur Ansicht.</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Tangential<span></span></span> Das Zeichen ist tangential zum Punktpfad auf dem Linienzug.</li></ol>
@@ -967,13 +964,13 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121222125
+Cached time: 20260121222204
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.453 seconds
-Real time usage: 0.901 seconds
-Preprocessor visited node count: 1591/1000000
+CPU time usage: 0.475 seconds
+Real time usage: 1.754 seconds
+Preprocessor visited node count: 1590/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
@@ -983,19 +980,19 @@ Unstrip post&#8208;expand size: 66846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  595.829      1 -total
-  2.64%   15.758      1 Template:Draft_Tools_navi/de
-  1.74%   10.376      7 Template:RadioButton
-  1.69%   10.086      1 Template:Macro/de
-  1.47%    8.772      3 Template:ColoredText
-  1.37%    8.170      2 Template:Navigation_menu_2
-  1.22%    7.259     10 Template:CheckBox
-  1.14%    6.817      1 Template:Codeextralink
-  0.95%    5.635      6 Template:SpinBox
-  0.78%    4.627      1 Template:Userdocnavi/de
+100.00% 1044.026      1 -total
+  2.16%   22.595      1 Template:Draft_Tools_navi/de
+  2.01%   20.962     10 Template:Code
+  1.61%   16.771      1 Template:Caption
+  1.33%   13.866     10 Template:CheckBox
+  1.30%   13.611      1 Template:Codeextralink
+  1.28%   13.339      2 Template:Navigation_menu_2
+  1.08%   11.268      1 Template:Userdocnavi/de
+  1.00%   10.414      6 Template:SpinBox
+  0.82%    8.565      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222124 and revision id 1742163. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222202 and revision id 1742165. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
