Updated page Macro FCCircularText/de

--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -477,7 +477,6 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 </p><p><span id="Examples"></span>
 </p>
 <h2><span class="mw-headline" id="Beispiele">Beispiele</span></h2>
-<div class="mw-translate-fuzzy">
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 335px">
@@ -519,9 +518,7 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 </ul>
 </center>
 <p><br>
-</p>
-</div>
-<p><br>
+</p><p><br>
 </p>
 <center>
 <ul class="gallery mw-gallery-traditional">
@@ -964,13 +961,13 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121222204
+Cached time: 20260121222233
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.475 seconds
-Real time usage: 1.754 seconds
-Preprocessor visited node count: 1590/1000000
+CPU time usage: 0.437 seconds
+Real time usage: 0.889 seconds
+Preprocessor visited node count: 1589/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
@@ -980,19 +977,19 @@ Unstrip post&#8208;expand size: 66846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00% 1044.026      1 -total
-  2.16%   22.595      1 Template:Draft_Tools_navi/de
-  2.01%   20.962     10 Template:Code
-  1.61%   16.771      1 Template:Caption
-  1.33%   13.866     10 Template:CheckBox
-  1.30%   13.611      1 Template:Codeextralink
-  1.28%   13.339      2 Template:Navigation_menu_2
-  1.08%   11.268      1 Template:Userdocnavi/de
-  1.00%   10.414      6 Template:SpinBox
-  0.82%    8.565      1 Template:MenuCommand
+100.00%  624.273      1 -total
+  3.49%   21.784      7 Template:RadioButton
+  2.31%   14.430      1 Template:MenuCommand
+  1.86%   11.634      1 Template:Draft_Tools_navi/de
+  1.41%    8.785     10 Template:CheckBox
+  1.25%    7.821      1 Template:Userdocnavi/de
+  1.18%    7.378     14 Template:Incode
+  1.17%    7.309      3 Template:ColoredText
+  1.17%    7.296      1 Template:Codeextralink
+  1.07%    6.710      6 Template:SpinBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222202 and revision id 1742165. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222232 and revision id 1742167. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
