--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -961,12 +961,12 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121222233
+Cached time: 20260121222241
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.437 seconds
-Real time usage: 0.889 seconds
+CPU time usage: 0.453 seconds
+Real time usage: 0.781 seconds
 Preprocessor visited node count: 1589/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
@@ -977,19 +977,19 @@ Unstrip post&#8208;expand size: 66846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  624.273      1 -total
-  3.49%   21.784      7 Template:RadioButton
-  2.31%   14.430      1 Template:MenuCommand
-  1.86%   11.634      1 Template:Draft_Tools_navi/de
-  1.41%    8.785     10 Template:CheckBox
-  1.25%    7.821      1 Template:Userdocnavi/de
-  1.18%    7.378     14 Template:Incode
-  1.17%    7.309      3 Template:ColoredText
-  1.17%    7.296      1 Template:Codeextralink
-  1.07%    6.710      6 Template:SpinBox
+100.00%  458.321      1 -total
+  1.79%    8.199     10 Template:Code
+  1.72%    7.901      7 Template:RadioButton
+  1.54%    7.048     10 Template:CheckBox
+  1.36%    6.234      1 Template:Macro/de
+  1.28%    5.888      1 Template:Codeextralink
+  1.24%    5.695      1 Template:Draft_Tools_navi/de
+  1.10%    5.056      6 Template:SpinBox
+  1.08%    4.950     19 Template:Clear
+  1.07%    4.921      1 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222232 and revision id 1742167. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222240 and revision id 1742169. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
