--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -961,12 +961,12 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121222241
+Cached time: 20260121222250
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.453 seconds
-Real time usage: 0.781 seconds
+CPU time usage: 0.427 seconds
+Real time usage: 1.149 seconds
 Preprocessor visited node count: 1589/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
@@ -977,19 +977,19 @@ Unstrip post&#8208;expand size: 66846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  458.321      1 -total
-  1.79%    8.199     10 Template:Code
-  1.72%    7.901      7 Template:RadioButton
-  1.54%    7.048     10 Template:CheckBox
-  1.36%    6.234      1 Template:Macro/de
-  1.28%    5.888      1 Template:Codeextralink
-  1.24%    5.695      1 Template:Draft_Tools_navi/de
-  1.10%    5.056      6 Template:SpinBox
-  1.08%    4.950     19 Template:Clear
-  1.07%    4.921      1 Template:Emphasis
+100.00%  843.872      1 -total
+  3.61%   30.424      1 Template:Draft_Tools_navi/de
+  2.69%   22.734      3 Template:ColoredText
+  1.15%    9.728      1 Template:Codeextralink
+  1.12%    9.465     10 Template:CheckBox
+  0.92%    7.724      2 Template:Navigation_menu_2
+  0.82%    6.935      1 Template:MenuCommand
+  0.76%    6.427     18 Template:FALSE
+  0.74%    6.227      1 Template:Macro/de
+  0.64%    5.405      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222240 and revision id 1742169. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222248 and revision id 1742171. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
