--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -961,12 +961,12 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121222312
+Cached time: 20260121222321
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.401 seconds
-Real time usage: 0.553 seconds
+CPU time usage: 0.381 seconds
+Real time usage: 0.554 seconds
 Preprocessor visited node count: 1589/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
@@ -977,19 +977,19 @@ Unstrip post&#8208;expand size: 66822/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  304.143      1 -total
-  2.67%    8.108      1 Template:Macro/de
-  2.54%    7.740      1 Template:Draft_Tools_navi/de
-  1.60%    4.859      3 Template:ColoredText
-  1.34%    4.061     10 Template:Code
-  1.28%    3.908      7 Template:RadioButton
-  1.08%    3.283      6 Template:SpinBox
-  1.06%    3.226     10 Template:CheckBox
-  1.03%    3.146      2 Template:Navigation_menu_2
-  0.65%    1.970      1 Template:MenuCommand
+100.00%  327.726      1 -total
+  2.72%    8.905      1 Template:Draft_Tools_navi/de
+  2.39%    7.843     14 Template:Incode
+  1.77%    5.802      1 Template:MenuCommand
+  1.74%    5.713      7 Template:RadioButton
+  1.70%    5.573      3 Template:ColoredText
+  1.55%    5.090     10 Template:Code
+  1.43%    4.692     10 Template:CheckBox
+  1.35%    4.415      1 Template:Macro/de
+  1.27%    4.167      6 Template:SpinBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222311 and revision id 1742173. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222320 and revision id 1742175. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
