--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -707,8 +707,8 @@ Modusentlastung:
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_59.png&amp;filetimestamp=20160704123531&amp;.html" class="mw-file-description" title="Die extrudierte Ellipse ausw&auml;hlen, den Schnitt (text) und vereinigen."><img alt="Die extrudierte Ellipse ausw&auml;hlen, den Schnitt (text) und vereinigen." src="../File/FCCircularText_59.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
-			<div class="gallerytext">Die extrudierte Ellipse ausw&auml;hlen, den Schnitt (text) und vereinigen.</div>
+			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_59.png&amp;filetimestamp=20160704123531&amp;.html" class="mw-file-description" title="Die extrudierte Ellipse ausw&auml;hlen, den Schnitt (text) und diese vereinigen."><img alt="Die extrudierte Ellipse ausw&auml;hlen, den Schnitt (text) und diese vereinigen." src="../File/FCCircularText_59.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
+			<div class="gallerytext">Die extrudierte Ellipse ausw&auml;hlen, den Schnitt (text) und diese vereinigen.</div>
 		</li>
 </ul>
 </center>
@@ -961,35 +961,35 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121222321
+Cached time: 20260121222418
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.381 seconds
-Real time usage: 0.554 seconds
+CPU time usage: 0.498 seconds
+Real time usage: 1.740 seconds
 Preprocessor visited node count: 1589/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 66822/5000000 bytes
+Unstrip post&#8208;expand size: 66840/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  327.726      1 -total
-  2.72%    8.905      1 Template:Draft_Tools_navi/de
-  2.39%    7.843     14 Template:Incode
-  1.77%    5.802      1 Template:MenuCommand
-  1.74%    5.713      7 Template:RadioButton
-  1.70%    5.573      3 Template:ColoredText
-  1.55%    5.090     10 Template:Code
-  1.43%    4.692     10 Template:CheckBox
-  1.35%    4.415      1 Template:Macro/de
-  1.27%    4.167      6 Template:SpinBox
+100.00% 1161.226      1 -total
+  1.95%   22.647      1 Template:Draft_Tools_navi/de
+  1.08%   12.589     14 Template:Incode
+  1.05%   12.236     10 Template:Code
+  0.96%   11.101      7 Template:RadioButton
+  0.92%   10.736     10 Template:CheckBox
+  0.91%   10.618      6 Template:SpinBox
+  0.91%   10.549     19 Template:Clear
+  0.84%    9.792      2 Template:Navigation_menu_2
+  0.83%    9.659     14 Template:TRUE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222320 and revision id 1742175. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222416 and revision id 1742177. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
