Updated page Macro FCCircularText/de

--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -756,12 +756,8 @@ Modusentlastung:
 </p>
 <h2><span id="Einschr.C3.A4nkungen"></span><span class="mw-headline" id="Einschr&auml;nkungen">Einschr&auml;nkungen</span></h2>
 <p><i>Hinweis</i> Es ist m&ouml;glich, dass zwischen den Versionen ein Fehler auftritt. Bitte das Problem im Forum melden und auf die aktualisierte Fehlerbehebung oder die R&uuml;ckkehr zu einer fr&uuml;heren Version des Makros warten. Vielen Dank.
-</p>
-<div class="mw-translate-fuzzy">
-<p>Es ist m&ouml;glich, dass zwei Zeichen &uuml;berlappen. Wenn dies passiert, hier ist eine Problemumgehung verf&uuml;gbar unter Verwendung des <a rel="nofollow" class="external text" href="https://wiki.freecad.org/Macro_Rotate_To_Point">Rotate-To-Point Makro</a>.
-</p>
-</div>
-<p><br>
+</p><p>Es ist m&ouml;glich, dass zwei Zeichen &uuml;berlappen. Wenn dies passiert, hier ist eine Problemumgehung verf&uuml;gbar unter Verwendung des <a rel="nofollow" class="external text" href="https://wiki.freecad.org/Macro_Rotate_To_Point">Rotate-To-Point Makro</a>.
+<br>
 </p>
 <center>
 <ul class="gallery mw-gallery-traditional">
@@ -959,13 +955,13 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121222442
+Cached time: 20260121222452
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.443 seconds
-Real time usage: 0.653 seconds
-Preprocessor visited node count: 1588/1000000
+CPU time usage: 0.503 seconds
+Real time usage: 2.486 seconds
+Preprocessor visited node count: 1587/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
@@ -975,19 +971,19 @@ Unstrip post&#8208;expand size: 66840/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  326.557      1 -total
-  3.12%   10.196      1 Template:Draft_Tools_navi/de
-  1.98%    6.464      1 Template:Macro/de
-  1.80%    5.874     10 Template:CheckBox
-  1.69%    5.507      7 Template:RadioButton
-  1.65%    5.373     10 Template:Code
-  1.47%    4.785      6 Template:SpinBox
-  1.36%    4.441      2 Template:Navigation_menu_2
-  1.11%    3.638      1 Template:Codeextralink
-  1.08%    3.515     14 Template:Incode
+100.00% 1540.976      1 -total
+  2.20%   33.916      1 Template:Draft_Tools_navi/de
+  1.86%   28.670      3 Template:ColoredText
+  1.37%   21.165      2 Template:Navigation_menu_2
+  1.37%   21.044     19 Template:Clear
+  0.87%   13.476      1 Template:Macro/de
+  0.74%   11.394     10 Template:Code
+  0.74%   11.378     10 Template:CheckBox
+  0.59%    9.105      1 Template:Codeextralink
+  0.58%    8.946      7 Template:RadioButton
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222442 and revision id 1742179. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222450 and revision id 1742181. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
